# raccoon-api/src/main/resources/static/docs/openapi3.yaml
@@ -29,7 +29,7 @@ paths:
               $ref: '#/components/schemas/story1012374214'
             examples:
               story-controller-test/스토리_생성:
-                value: "{\"contents\":\"스토리의 내용입니다.\",\"storyImage\":\"org.springframework.mock.web.MockMultipartFile@6ed7b9c5\"\
+                value: "{\"contents\":\"스토리의 내용입니다.\",\"storyImage\":\"org.springframework.mock.web.MockMultipartFile@5444f1c3\"\
                   }"
       responses:
         "200":
@@ -65,7 +65,7 @@ paths:
             examples:
               story-controller-test/스토리_업데이트:
                 value: "{\"storyId\":1,\"contents\":\"스토리의 내용이에요\",\"storyImage\"\
-                  :\"org.springframework.mock.web.MockMultipartFile@2e4d2232\"}"
+                  :\"org.springframework.mock.web.MockMultipartFile@cd93621\"}"
       responses:
         "200":
           description: "200"
@@ -129,9 +129,9 @@ paths:
               $ref: '#/components/schemas/user-profile-1030560250'
             examples:
               user-profile-controller-test/프로필_업데이트:
-                value: "{\"gender\":\"MAN\",\"wantedAnimal\":\"CAT\",\"nickname\"\
-                  :\"유저닉네임\",\"mbti\":\"INTP\",\"animal\":\"CAT\",\"location\":\"\
-                  GANDONG\",\"profileImage\":\"org.springframework.mock.web.MockMultipartFile@1aeff8ca\"\
+                value: "{\"gender\":\"MAN\",\"wantedAnimal\":\"고양이상\",\"nickname\"\
+                  :\"유저닉네임\",\"mbti\":\"INTP\",\"animal\":\"고양이상\",\"location\":\"\
+                  강동구\",\"profileImage\":\"org.springframework.mock.web.MockMultipartFile@6a1d1467\"\
                   ,\"smokingStatus\":false,\"job\":\"대학생이에요\",\"age\":25,\"height\"\
                   :175,\"selfDescription\":\"안녕하세요 자기소개입니다.\"}"
       responses:
@@ -173,15 +173,15 @@ paths:
           content:
             application/json;charset=UTF-8:
               schema:
-                $ref: '#/components/schemas/user-userId-461205012'
+                $ref: '#/components/schemas/user-userId23762074'
               examples:
                 user-profile-controller-test/프로필_조회:
                   value: "{\"message\":\"성공\",\"code\":200,\"data\":{\"nickname\"\
-                    :\"오어어엉\",\"profileImageUrl\":\"https://www.google.com/imgres?imgurl=https%3A%2F%2Ftalkimg.imbc.com%2FTVianUpload%2Ftvian%2FTViews%2Fimage%2F2023%2F01%2F03%2F7eec0933-d37b-4939-afb4-f1488ebc0d68.jpg&tbnid=A4jvGsqs01f0aM&vet=12ahUKEwiFrPSB9vT9AhWCdt4KHSIgABUQMygHegUIARDZAQ..i&imgrefurl=https%3A%2F%2Fimnews.imbc.com%2Fnews%2F2023%2Fenter%2Farticle%2F6442122_36161.html&docid=xWL2UuU60SIGKM&w=800&h=1119&q=%ED%95%B4%EB%A6%B0&ved=2ahUKEwiFrPSB9vT9AhWCdt4KHSIgABUQMygHegUIARDZAQ\"\
-                    ,\"gender\":\"WOMAN\",\"age\":18,\"height\":167,\"job\":\"모름\"\
-                    ,\"location\":\"GANDONG\",\"selfDescription\":\"안녕하세요\",\"smokingStatus\"\
-                    :false,\"mbti\":\"INTP\",\"animal\":\"CAT\",\"wantedAnimal\":\"\
-                    DEER\"}}"
+                    :\"오어어엉\",\"profileImageUrls\":[\"https:/sdg\",\"https:/asgd\"\
+                    ],\"gender\":\"WOMAN\",\"age\":18,\"height\":167,\"job\":\"모름\"\
+                    ,\"location\":\"NOWON\",\"selfDescription\":\"안녕하세요\",\"smokingStatus\"\
+                    :false,\"mbti\":\"INTP\",\"animalType\":\"DEER\",\"longitude\"\
+                    :112.125,\"latitude\":135323.235}}"
       security:
       - bearerAuthJWT: []
   /user/profile/all:
@@ -205,19 +205,87 @@ paths:
           content:
             application/json;charset=UTF-8:
               schema:
-                $ref: '#/components/schemas/user-profile-all-1103448983'
+                $ref: '#/components/schemas/user-profile-all-193200887'
               examples:
                 user-profile-controller-test/프로필_전체조회:
                   value: "{\"message\":\"성공\",\"code\":200,\"data\":[{\"profileId\"\
                     :1,\"nickname\":\"김성지1\",\"gender\":\"MAN\",\"age\":25,\"height\"\
-                    :175,\"profileImageUrl\":\"http://\",\"location\":\"GANGSEO\"\
-                    ,\"animal\":\"CAT\"},{\"profileId\":2,\"nickname\":\"김성지2\",\"\
-                    gender\":\"MAN\",\"age\":25,\"height\":175,\"profileImageUrl\"\
-                    :\"http://\",\"location\":\"GANGBUK\",\"animal\":\"DOG\"}]}"
+                    :175,\"profileImageUrl\":\"http://\",\"location\":\"GANDONG\"\
+                    ,\"animalType\":\"CAT\",\"longitude\":2153.23,\"latitude\":23.42},{\"\
+                    profileId\":2,\"nickname\":\"김성지2\",\"gender\":\"WOMAN\",\"age\"\
+                    :25,\"height\":175,\"profileImageUrl\":\"http://\",\"location\"\
+                    :\"GANGBUK\",\"animalType\":\"DOG\",\"longitude\":23463.34,\"\
+                    latitude\":1544.32}]}"
       security:
       - bearerAuthJWT: []
 components:
   schemas:
+    user-userId23762074:
+      type: object
+      properties:
+        code:
+          type: number
+          description: 응답 코드
+        data:
+          type: object
+          properties:
+            gender:
+              type: string
+              description: 프로필 닉네임
+            profileImageUrls:
+              type: array
+              description: 프로필 닉네임
+              items:
+                oneOf:
+                - type: object
+                - type: boolean
+                - type: string
+                - type: number
+            latitude:
+              type: number
+              description: 경도
+            animalType:
+              type: string
+              description: 프로필 닉네임
+            selfDescription:
+              type: string
+              description: 프로필 닉네임
+            nickname:
+              type: string
+              description: 프로필 닉네임
+            mbti:
+              type: string
+              description: 프로필 닉네임
+            location:
+              type: string
+              description: 프로필 닉네임
+            smokingStatus:
+              type: boolean
+              description: 프로필 닉네임
+            job:
+              type: string
+              description: 프로필 닉네임
+            age:
+              type: number
+              description: 프로필 닉네임
+            longitude:
+              type: number
+              description: 위도
+            height:
+              type: number
+              description: 프로필 닉네임
+        message:
+          type: string
+          description: 결과 메시지
+    story1012374214:
+      type: object
+      properties:
+        contents:
+          type: string
+          description: 스토리 내용
+        storyImage:
+          type: string
+          description: 스토리 이미지
     story221479330:
       type: object
       properties:
@@ -233,16 +301,7 @@ components:
         message:
           type: string
           description: 메시지
-    story1012374214:
-      type: object
-      properties:
-        contents:
-          type: string
-          description: 스토리 내용
-        storyImage:
-          type: string
-          description: 스토리 이미지
-    user-profile-all-1103448983:
+    user-profile-all-193200887:
       type: object
       properties:
         code:
@@ -259,12 +318,15 @@ components:
               profileId:
                 type: number
                 description: 유저의 프로파일 ID
+              latitude:
+                type: number
+                description: 유저의 위도
+              animalType:
+                type: string
+                description: 유저의 동물상
               nickname:
                 type: string
                 description: 유저의 닉네임
-              animal:
-                type: string
-                description: 유저의 동물상
               location:
                 type: string
                 description: 유저의 지역
@@ -274,6 +336,9 @@ components:
               age:
                 type: number
                 description: 유저의 나이
+              longitude:
+                type: number
+                description: 유저의 경도
               height:
                 type: number
                 description: 유저의 키
@@ -346,54 +411,6 @@ components:
         storyImage:
           type: string
           description: 스토리 이미지
-    user-userId-461205012:
-      type: object
-      properties:
-        code:
-          type: number
-          description: 응답 코드
-        data:
-          type: object
-          properties:
-            gender:
-              type: string
-              description: 프로필 닉네임
-            wantedAnimal:
-              type: string
-              description: 프로필 닉네임
-            nickname:
-              type: string
-              description: 프로필 닉네임
-            animal:
-              type: string
-              description: 프로필 닉네임
-            mbti:
-              type: string
-              description: 프로필 닉네임
-            location:
-              type: string
-              description: 프로필 닉네임
-            smokingStatus:
-              type: boolean
-              description: 프로필 닉네임
-            job:
-              type: string
-              description: 프로필 닉네임
-            profileImageUrl:
-              type: string
-              description: 프로필 닉네임
-            age:
-              type: number
-              description: 프로필 닉네임
-            selfDescription:
-              type: string
-              description: 프로필 닉네임
-            height:
-              type: number
-              description: 프로필 닉네임
-        message:
-          type: string
-          description: 결과 메시지
     story-all876884235:
       type: object
       properties:
